# gibber-ai

./: .gitignore  .prettierignore  .prettierrc  CLAUDE.md  eslint.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: credentials.rs  mod.rs
src/lib/: index.ts
src/lib/ai/: client.ts  index.ts  parser.ts  prompts.ts  session.ts  types.ts
src/lib/credentials/: api.ts  index.ts  types.ts
src/lib/gibber/: context.ts  executor.ts  gibber-audio-lib.d.ts  gibber-graphics-lib.d.ts  graphics.ts  index.ts  state.ts  types.ts
src/lib/types/: index.ts
src/routes/: +page.svelte
tests/: setup.ts
tests/unit/: credentials.test.ts
tests/unit/ai/: client.test.ts  parser.test.ts  prompts.test.ts  session.test.ts  types.test.ts
tests/unit/gibber/: context.test.ts  executor.test.ts  graphics.test.ts  state.test.ts  types.test.ts
